[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "__init__.py"]

[project]
name = "cornifer"
version = "0.1.0"
description = "An AI agent built from scratch, one capability at a time."
requires-python = ">=3.14"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
cornifer = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
